--- a/pages/accueil/_accueil.scss
+++ b/pages/accueil/_accueil.scss
@@ -23,21 +23,14 @@
         }
         
         h2 {
-            color: #D3573C;
+            color: $color-secondary;
             font-size: 2.25rem;
             font-weight: 100;
             margin-bottom: 0;
         }
 
-        img {
-            height: 200px; 
-            width: 200px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-
         &_location{
-            color: #901C1C;
+            color: $color-primary;
             font-size: 0.813rem; //13px
         }
 
