--- a/render/style.css
+++ b/render/style.css
@@ -16,6 +16,14 @@ a {
   text-decoration: none;
 }
 
+img.portrait {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,6 +52,34 @@ header a {
 
 .logo {
   height: 50px;
+}
+
+.likes_price_banner {
+  height: 70px;
+  min-width: 300px;
+  padding: 20px 30px;
+  background-color: #DB8876;
+  position: fixed;
+  font-size: 1.5rem;
+  right: 36px;
+  bottom: 0;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.likes_price_banner p {
+  margin: 0;
+  font-weight: 500;
 }
 
 .photographer_section {
@@ -97,14 +133,6 @@ header a {
   margin-bottom: 0;
 }
 
-.photographer_section .photographer_card img {
-  height: 200px;
-  width: 200px;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .photographer_section .photographer_card_location {
   color: #901C1C;
   font-size: 0.813rem;
@@ -127,6 +155,46 @@ header a {
   background-color: #FAFAFA;
   height: 300px;
   margin: 0 100px;
+  padding: 70px 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.photographer-header img {
+  border-radius: 50%;
+}
+
+.photographer-header h1 {
+  color: #D3573C;
+  font-size: 4rem;
+  font-weight: 400;
+  line-height: 1.3;
+  margin: 0;
+}
+
+.photographer-header_location {
+  font-size: 1.5rem;
+  line-height: 1.3;
+  margin: 0 0 19px 0;
+  color: #901C1C;
+}
+
+.photographer-header_tagline {
+  font-size: 1.125rem;
+  line-height: 1.3;
+  margin: 0;
+  color: #525252;
 }
 
 .contact_button {
@@ -160,7 +228,9 @@ header a {
 }
 
 .photo_card a {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 350px;
   height: 300px;
   overflow: hidden;
@@ -169,8 +239,8 @@ header a {
 .photo_card img {
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .photo_card_title {
@@ -188,6 +258,10 @@ header a {
 
 .photo_card_title p {
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 295px;
+  white-space: nowrap;
 }
 
 .photo_card_likes {
