--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -13,3 +13,10 @@ body {
 a{
     text-decoration: none;
 }
+
+img.portrait {
+    height: 200px; 
+    width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
