--- a/render/style.css
+++ b/render/style.css
@@ -63,16 +63,22 @@ img.portrait {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
+  height: auto;
+  margin-bottom: 25px;
 }
 
 .modal header img {
   cursor: pointer;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-top: 20px;
 }
 
 .modal header h2 {
-  font-size: 64px;
-  font-weight: normal;
-  text-align: center;
+  font-size: 4rem;
+  font-weight: 400;
+  text-align: left;
+  margin: 0;
 }
 
 form {
@@ -94,7 +100,7 @@ form label {
   font-size: 36px;
 }
 
-form div {
+form .formWrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,12 +115,32 @@ form div {
   margin-bottom: 26px;
 }
 
+form .formField {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+form .error input,
+form .error textarea {
+  border: 4px solid #901C1C;
+}
+
+form .error::after {
+  display: inline-block;
+  color: #901C1C;
+  font-size: 1rem;
+  content: attr(error-message);
+  height: 15px;
+  min-width: 100px;
+}
+
 form input,
 form textarea {
   width: 100%;
   height: 68px;
   border: none;
   border-radius: 5px;
+  font-size: 2rem;
 }
 
 form textarea {
