--- a/render/style.scss
+++ b/render/style.scss
@@ -7,6 +7,7 @@
 @import "../components/contactForm/contactForm.scss";
 @import "../components/header/header.scss";
 @import "../components/footer/footer.scss";
+@import "../components/lightbox/lightbox.scss";
 
 // Pages
 @import "../pages/accueil/accueil.scss";
