--- a/pages/photographer/_photographer.scss
+++ b/pages/photographer/_photographer.scss
@@ -68,16 +68,19 @@
     
     img{
         object-fit: cover;
-        min-width: 100%;
-        min-height: 100%;
+        width: 100%;
+        height: 100%;
+        &.top{
+            object-position: top;
+        }
     }
 
-    &_title{
+    &_title_section{
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin: 10px 0 30px 0;
-        p{
+        &_title{
             margin: 0;
             text-overflow: ellipsis;
             overflow: hidden; 
