--- a/render/style.css
+++ b/render/style.css
@@ -147,6 +147,49 @@ form textarea {
   height: 170px;
 }
 
+#lightbox_modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  padding-top: 70px;
+  overflow: auto;
+  background-color: rgba(196, 196, 196, 0.4);
+}
+
+.carrousel {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  padding: 20px;
+  margin: auto;
+}
+
+.carrousel img {
+  cursor: pointer;
+}
+
+.carrousel h2 {
+  font-size: 4rem;
+  font-weight: 400;
+  text-align: left;
+  margin: 0;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -364,11 +407,16 @@ header a {
 .photo_card img {
   -o-object-fit: cover;
      object-fit: cover;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-.photo_card_title {
+.photo_card img.top {
+  -o-object-position: top;
+     object-position: top;
+}
+
+.photo_card_title_section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -381,7 +429,7 @@ header a {
   margin: 10px 0 30px 0;
 }
 
-.photo_card_title p {
+.photo_card_title_section_title {
   margin: 0;
   text-overflow: ellipsis;
   overflow: hidden;
