--- a/components/modals/_lightbox.scss
+++ b/components/modals/_lightbox.scss
@@ -6,29 +6,55 @@
     top: 0;
     height: 100%;
     width: 100%;
-    padding-top: 70px;
+    padding: 30px;
     overflow: auto;
     background-color: rgba(196, 196, 196, 0.4);
 }
 
-.carrousel {
-    width: 80%;
+.carousel {
     display: flex;
+    position: relative;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
+    justify-content: center;
     overflow: hidden;
-    padding: 20px;
+    padding: 20px 30px;
     margin: auto;
-    
-    img {
-        cursor: pointer;
+    background-color: white;
+    color: $color-primary;
+    &_previous{
+        margin-right: 35px;
+        font-size: 3rem;
+        min-width: 24px;
+        text-align: right;
+    }
+    &_data{
+        display: flex;
+        flex-direction: column;
+        p{
+            margin: 10px 0 0 0;
+            font-size: 1.5rem;
+            line-height: 1.3;
+        }
+        img, 
+        video{
+            max-height: 80vh;
+        }
+    }
+    &_next{
+        margin-left: 35px;
+        font-size: 3rem;
+        min-width: 24px;
     }
 
-    h2 {
-        font-size: 4rem;
-        font-weight: 400;
-        text-align: left;
-        margin: 0;
+
+    .close {
+        cursor: pointer;
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        width: 30px;
+        height: 30px;
     }
 }
