--- a/render/style.css
+++ b/render/style.css
@@ -155,39 +155,76 @@ form textarea {
   top: 0;
   height: 100%;
   width: 100%;
-  padding-top: 70px;
+  padding: 30px;
   overflow: auto;
   background-color: rgba(196, 196, 196, 0.4);
 }
 
-.carrousel {
-  width: 80%;
+.carousel {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   overflow: hidden;
-  padding: 20px;
+  padding: 20px 30px;
   margin: auto;
+  background-color: white;
+  color: #901C1C;
 }
 
-.carrousel img {
+.carousel_previous {
+  margin-right: 35px;
+  font-size: 3rem;
+  min-width: 24px;
+  text-align: right;
+}
+
+.carousel_data {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.carousel_data p {
+  margin: 10px 0 0 0;
+  font-size: 1.5rem;
+  line-height: 1.3;
+}
+
+.carousel_data img,
+.carousel_data video {
+  max-height: 80vh;
+}
+
+.carousel_next {
+  margin-left: 35px;
+  font-size: 3rem;
+  min-width: 24px;
+}
+
+.carousel .close {
   cursor: pointer;
-}
-
-.carrousel h2 {
-  font-size: 4rem;
-  font-weight: 400;
-  text-align: left;
-  margin: 0;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 header {
