--- a/render/style.css
+++ b/render/style.css
@@ -461,6 +461,11 @@ header a {
   margin: 50px 100px;
 }
 
+.photo-overview:last-child {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
 .photo_card {
   font-size: 1.375rem;
   color: #901C1C;
@@ -504,13 +509,14 @@ header a {
       -ms-flex-align: center;
           align-items: center;
   margin: 10px 0 30px 0;
+  max-width: 350px;
 }
 
 .photo_card_title_section_title {
   margin: 0;
   text-overflow: ellipsis;
   overflow: hidden;
-  width: 295px;
+  width: 288px;
   white-space: nowrap;
 }
 
