--- a/components/modals/_lightbox.scss
+++ b/components/modals/_lightbox.scss
@@ -8,7 +8,7 @@
     width: 100%;
     padding: 30px;
     overflow: auto;
-    background-color: rgba(196, 196, 196, 0.4);
+    background-color: white;
 }
 
 .carousel {
@@ -40,6 +40,7 @@
         img, 
         video{
             max-height: 80vh;
+            max-width: 1165px;
         }
     }
     &_next{
