--- a/components/header/_header.scss
+++ b/components/header/_header.scss
@@ -1,20 +1,31 @@
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 100px 0 100px;
 
-    h1 {
-        color: $color-primary;
-        margin-right: 100px;
-    }
+  @include for-phone-only {
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 20px;
+  }
 
-    a{
-        margin-left: 100px;
+  h1 {
+    color: $color-primary;
+    font-size: 2rem;
+    @include for-phone-only {
+      font-size: 1rem;
     }
+  }
+
+  a {
+    @include for-phone-only {
+      width: 30%;
+    }
+  }
 }
 
 .logo {
-    height: 50px;
+  height: 50px;
 }
