--- a/components/modals/_lightbox.scss
+++ b/components/modals/_lightbox.scss
@@ -1,61 +1,91 @@
 #lightbox_modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    padding: 30px;
-    overflow: auto;
-    background-color: white;
+  display: none;
+  position: fixed;
+  justify-content: center;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  padding: 30px;
+  background-color: white;
+  @include for-phone-only {
+    padding: 10px;
+  }
 }
 
 .carousel {
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  padding: 20px 30px;
+  background-color: white;
+  color: $color-primary;
+  @include for-phone-only {
+    padding: 0;
+  }
+
+  &_previous {
+    margin-right: 35px;
+    font-size: 3rem;
+    min-width: 24px;
+    text-align: right;
+    @include for-phone-only {
+      position: fixed;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      left: 5%;
+      margin: 0;
+    }
+  }
+  &_data {
     display: flex;
-    position: relative;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    padding: 20px 30px;
-    margin: auto;
-    background-color: white;
-    color: $color-primary;
-    &_previous{
-        margin-right: 35px;
-        font-size: 3rem;
-        min-width: 24px;
-        text-align: right;
+    flex-direction: column;
+    @include for-phone-only {
+      width: 100%;
     }
-    &_data{
-        display: flex;
-        flex-direction: column;
-        p{
-            margin: 10px 0 0 0;
-            font-size: 1.5rem;
-            line-height: 1.3;
-        }
-        img, 
-        video{
-            max-height: 80vh;
-            max-width: 1165px;
-        }
+    p {
+      margin: 10px 0 0 0;
+      font-size: 1.5rem;
+      line-height: 1.3;
     }
-    &_next{
-        margin-left: 35px;
-        font-size: 3rem;
-        min-width: 24px;
+    img,
+    video {
+      max-height: 80vh;
+      max-width: 1165px;
     }
+  }
+  &_next {
+    margin-left: 35px;
+    font-size: 3rem;
+    min-width: 24px;
+    @include for-phone-only {
+      position: fixed;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      right: 5%;
+      margin: 0;
+    }
+  }
 
-
-    .close {
-        cursor: pointer;
-        position: absolute;
-        top: 30px;
-        right: 30px;
-        width: 30px;
-        height: 30px;
+  .close {
+    cursor: pointer;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 30px;
+    height: 30px;
+    @include for-phone-only {
+      top: 10px;
+      right: 10px;
     }
+  }
 }
