--- a/pages/photographer/_photographer.scss
+++ b/pages/photographer/_photographer.scss
@@ -1,182 +1,238 @@
 .photographer-header {
-    background-color: #FAFAFA;
-    height: 300px;
-    margin: 0 100px;
-    padding: 70px 50px;
+  background-color: #fafafa;
+  height: 300px;
+  margin: 30px 0px;
+  padding: 70px 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  @include for-desktop-up {
+    margin: 30px 100px;
+  }
+
+  @include for-phone-only {
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+    margin: 0;
+    padding: 30px 5%;
+    gap: 25px;
+  }
+
+  img {
+    border-radius: 50%;
+  }
+  h1 {
+    color: $color-secondary;
+    font-size: 4rem;
+    font-weight: 400;
+    line-height: 1.3;
+    margin: 0;
+    @include for-phone-only {
+      font-size: 2rem;
+    }
+  }
+
+  &_location {
+    font-size: 1.5rem;
+    line-height: 1.3;
+    margin: 0 0 19px 0;
+    color: $color-primary;
+    @include for-phone-only {
+      font-size: 1rem;
+    }
+  }
+
+  &_tagline {
+    font-size: 1.125rem;
+    line-height: 1.3;
+    margin: 0;
+    color: $grayscale-text;
+  }
+}
+
+.photographer_details {
+  @include for-phone-only {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    img{
-        border-radius: 50%;
-    }
-    h1{
-        color: $color-secondary;
-        font-size: 4rem;
-        font-weight: 400;
-        line-height: 1.3;
-        margin: 0;
-    }
-
-    &_location{
-        font-size: 1.5rem;
-        line-height: 1.3;
-        margin: 0 0 19px 0;
-        color: $color-primary;
-    }
-
-    &_tagline{
-        font-size: 1.125rem;
-        line-height: 1.3;
-        margin: 0;
-        color: $grayscale-text;
-    }
+    width: 100%;
+  }
 }
 
 .contact_button {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 11px;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  padding: 11px;
+  width: 170px;
+  height: 70px;
+  border: none;
+  background-color: #901c1c;
+  border-radius: 5px;
+  cursor: pointer;
+
+  @include for-phone-only {
+    width: 100%;
+    border-radius: 0%;
+  }
+}
+
+.sort_list {
+  display: flex;
+  justify-content: flex-start;
+  padding-top: 20px;
+  height: 68px;
+  margin: 20px 100px;
+  overflow: visible;
+  @include for-phone-only {
+    margin: 20px 5%;
+  }
+
+  label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "DM Sans", sans-serif;
+    font-size: 1.125rem;
+    font-weight: 500;
+  }
+  select {
+    font-family: "DM Sans", sans-serif;
+    font-size: 1.125rem;
+    font-weight: 700;
+    margin-left: 25px;
+    background-color: $color-primary;
     width: 170px;
-    height: 70px;
-    border: none;
-    background-color: #901C1C;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.sort_list{
+    padding: 10px;
+    color: white;
+    option {
+      border-bottom: 1px solid white;
+      height: 55px;
+      padding: 12px 10px;
+      &:last-child {
+        border: 0;
+      }
+    }
+  }
+  .select-menu {
+    margin-left: 25px;
+    background-color: $color-primary;
+    padding: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
-    padding-top: 20px;
-    height: 68px;
-    margin:  0 100px;
     overflow: visible;
-    label{
-        font-family: "DM Sans", sans-serif;
-        font-size: 1.125rem;
-        font-weight: 700;
-        margin-top: 10px;
+    height: fit-content;
+    position: relative;
+    z-index: 1;
+    button {
+      font-family: "DM Sans", sans-serif;
+      font-size: 1.125rem;
+      font-weight: 700;
+      color: white;
+      border: none;
+      border-bottom: 1px solid white;
+      background-color: $color-primary;
+      height: 55px;
+      width: 150px;
+      padding: 12px 10px;
+      text-align: left;
+      &:last-child {
+        border: 0;
+      }
     }
-    select{
-        font-family: "DM Sans", sans-serif;
-        font-size: 1.125rem;
-        font-weight: 700;
-        margin-left: 25px;
-        background-color: $color-primary;
-        width: 170px;
-        padding: 10px;
-        color: white;
-        option{
-            border-bottom: 1px solid white;
-            height: 55px;
-            padding: 12px 10px;
-            &:last-child{
-                border: 0;
-            }
-        }
+    i {
+      position: absolute;
+      top: 28px;
+      right: 20px;
+      color: white;
+      font-size: 1.2rem;
+      font-weight: 700;
     }
-    .select-menu{
-        margin-left: 25px;
-        background-color: $color-primary;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        overflow: visible;
-        height: fit-content;
-        position: relative;
-        z-index: 1;
-        button{
-            font-family: "DM Sans", sans-serif;
-            font-size: 1.125rem;
-            font-weight: 700;
-            color: white;
-            border: none;
-            border-bottom: 1px solid white;
-            background-color: $color-primary;
-            height: 55px;
-            width: 150px;
-            padding: 12px 10px;
-            text-align: left;
-            &:last-child{
-                border: 0;
-            }
-        }
-        i{
-            position: absolute;
-            top: 28px;
-            right: 20px;
-            color: white;
-            font-size: 1.2rem;
-            font-weight: 700;
-        }
-    }
+  }
 }
 
-.photo-overview{
-    display: flex;
-    flex-wrap: wrap;
+.photo-overview {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 50px 100px;
+  @include for-phone-only {
+    width: 90%;
+    margin: 0 5% 65px 5%;
+  }
+  @include for-tablet-landscape-up {
     justify-content: space-between;
-    margin: 50px 100px;
+  }
 }
 
-.photo_card{
-    font-size: 1.375rem; // 22px
-    color: $color-primary;
-    
-    &:last-child{
-        align-self: flex-start;
-    }
+.photo_card {
+  font-size: 1.375rem; // 22px
+  color: $color-primary;
+  max-width: 100%;
 
-    a{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        width: 350px;
-        height: 300px;
-    }
-    
-    img{
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        &.top{
-            object-position: top;
-        }
-    }
+  &:last-child {
+    align-self: flex-start;
+  }
 
-    &_title_section{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 10px 0 30px 0;
-        max-width: 350px;
-        &_title{
-            margin: 0;
-            text-overflow: ellipsis;
-            overflow: hidden; 
-            width: 288px; 
-            white-space: nowrap;
-        }
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    width: 350px;
+    height: 300px;
+    @include for-phone-only {
+      max-width: 100%;
     }
-    
-    &_likes{
-        font-weight: 500;
-        font-style: normal;
-        &::after {
-            content: "\f004";
-            font-size: 1.125rem;
-            -webkit-font-smoothing: antialiased;
-            display: var(--fa-display,inline-block);
-            font-style: normal;
-            font-variant: normal;
-            line-height: 1;
-            text-rendering: auto;
-            font-family: "Font Awesome 6 Free";
-            font-weight: 900;
-        }
+  }
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    &.top {
+      object-position: top;
     }
+  }
+
+  &_title_section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0 30px 0;
+    max-width: 350px;
+    @include for-phone-only {
+      max-width: 100%;
+    }
+    &_title {
+      margin: 0;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 288px;
+      max-width: 80%;
+      white-space: nowrap;
+    }
+  }
+
+  &_likes {
+    font-weight: 500;
+    font-style: normal;
+    &::after {
+      content: "\f004";
+      font-size: 1.125rem;
+      -webkit-font-smoothing: antialiased;
+      display: var(--fa-display, inline-block);
+      font-style: normal;
+      font-variant: normal;
+      line-height: 1;
+      text-rendering: auto;
+      font-family: "Font Awesome 6 Free";
+      font-weight: 900;
+    }
+  }
 }
