--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -1,26 +1,27 @@
-*{
-    box-sizing: border-box
+* {
+  box-sizing: border-box;
 }
-:root{
-    font-size: 16px;
+:root {
+  font-size: 16px;
 }
 
 body {
-    font-family: "DM Sans", sans-serif;
-    margin: 0;
+  font-family: "DM Sans", sans-serif;
+  margin: 0;
+  width: 100vw;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
 img.portrait {
-    height: 200px; 
-    width: 200px;
-    border-radius: 50%;
-    object-fit: cover;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.sr-only{
-    display: none;
+.sr-only {
+  display: none;
 }
